--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,12 @@ dependencies:
   path_provider: ^2.0.10
   
   #riverpod
-  riverpod: ^2.0.0-dev.7
-  flutter_riverpod: ^2.0.0-dev.7
-  hooks_riverpod: ^2.0.0-dev.7
+  riverpod: ^2.0.0-dev.9
+  flutter_riverpod: ^2.0.0-dev.9
+  hooks_riverpod: ^2.0.0-dev.9
+
+  #environment
+  flutter_dotenv: ^5.0.2
 
   #mobile & web
   easy_localization: ^3.0.0
